# tuner

./: .gitignore  ARCHITECTURE.md  Cargo.toml  IDEAS-round4-500.md  PLAN.md  README.md  RECOMMENDATIONS.md  TOP-500-backlog.md  recommendation.md
.github/workflows/: build-desktop.yml  build-egui.yml  build-tauri.yml  build-web.yml  build.yml  deploy.yml  pr-deploy.yml  release.yml  test-core.yml
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: lib.rs  native_audio.rs
egui/: Cargo.toml  README.md
egui/src/: main.rs
pitch-core/: Cargo.toml
pitch-core/src/: domain.rs  lib.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/: manifest.webmanifest
web/public/egui-wasm/: guitar_tuner_egui.js
web/scripts/: test-core.mjs
web/src/: App.vue  style.css
web/src/components/: CentsGauge.vue  CentsHistory.vue  CentsHistoryGraph.vue  CustomTuningEditor.vue  CustomTuningTransfer.vue  DisplayModeSelector.vue  DisplayPreferences.vue  EarTrainingPanel.vue  FreqReadout.vue  Fretboard.vue  InputDeviceSelector.vue  InstrumentProfileEditor.vue  LevelMeter.vue  MetronomePanel.vue  MicButton.vue  NoteDisplay.vue  PerStringCents.vue  PracticeStatsPanel.vue  Spectrogram.vue  Spectrum.vue  StringOffsetsPanel.vue  StringSelector.vue  TemperamentPanel.vue  TunerControls.vue  TuningOptions.vue  TuningSelector.vue  Waveform.vue
web/src/composables/: useAudioInput.ts  useCentsHistory.ts  useEarTraining.ts  useHiDpiCanvas.ts  useMetronome.ts  useNativeAudioInput.ts  usePitchLoop.ts  useReferenceTone.ts  useSettings.ts  useTuner.ts  useTuningState.ts
web/src/stores/: l10n.ts
web/src/utils/: audio.ts  notes.ts  pitch.ts  settingsStorage.ts
web/src/workers/: pitchWorker.ts
