[workspace]
resolver = "2"
members = [
    "pitch-core",
    "egui",
    "desktop/src-tauri",
]

# Common profile settings for the workspace (native + future wasm)
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[workspace.dependencies]
# Shared dependency versions can go here later
# e.g. wasm-bindgen = "0.2"
